--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
             android:theme="@style/LoginTheme">
         </activity>
 
+        <activity android:name=".HomeActivity"
+            android:theme="@style/LoginTheme">
+        </activity>
+
         <activity android:name=".ForgotPasswordActivity" />
 
         <activity
