--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,12 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
-        <activity android:name=".DashBoardActivity"
-            android:theme="@style/LoginTheme">
-        </activity>
-
-        <activity android:name=".HomeActivity"
+        <activity android:name=".AddCaseActivity"></activity>
+        <activity
+            android:name=".DashBoardActivity"
+            android:theme="@style/LoginTheme"></activity>
+        <activity
+            android:name=".HomeActivity"
             android:theme="@style/LoginTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -22,14 +22,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".ForgotPasswordActivity" />
-
         <activity
             android:name=".RegistrationActivity"
-            android:theme="@style/LoginTheme">
-        </activity>
-
+            android:theme="@style/LoginTheme"></activity>
         <activity
             android:name=".LoginActivity"
             android:theme="@style/LoginTheme" />
