--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".AddCaseActivity"></activity>
+        <activity android:name=".CaseDetailsActivity"></activity>
+        <activity android:name=".AddCaseActivity" />
         <activity
             android:name=".DashBoardActivity"
-            android:theme="@style/LoginTheme"></activity>
+            android:theme="@style/LoginTheme" />
         <activity
             android:name=".HomeActivity"
             android:theme="@style/LoginTheme">
