--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.libraapplication">
-    <uses-permission android:name="android.permission.INTERNET"/>
+
+    <uses-permission android:name="android.permission.INTERNET" />
 
     <application
         android:allowBackup="true"
@@ -10,26 +11,26 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.CaseDetailsActivity"
-            android:theme="@style/LoginTheme"></activity>
+        <activity android:name=".Activity.ProfileActivity"></activity>
+        <activity
+            android:name=".Activity.CaseDetailsActivity"
+            android:theme="@style/LoginTheme" />
         <activity android:name=".Activity.AddCaseActivity" />
         <activity
             android:name=".Activity.HomeActivity"
-            android:theme="@style/LoginTheme">
-        </activity>
+            android:theme="@style/LoginTheme"></activity>
         <activity android:name=".Activity.ForgotPasswordActivity" />
         <activity
             android:name=".Activity.RegistrationActivity"
-            android:theme="@style/LoginTheme"></activity>
+            android:theme="@style/LoginTheme" />
         <activity
             android:name=".Activity.LoginActivity"
-            android:theme="@style/LoginTheme" >
+            android:theme="@style/LoginTheme">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-        <intent-filter>
-            <action android:name="android.intent.action.MAIN" />
-
-            <category android:name="android.intent.category.LAUNCHER" />
-        </intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
 
         <meta-data
