--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,9 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".Activity.ProfileActivity"></activity>
+        <activity android:name=".Activity.ProfileActivity"
+            android:theme="@style/LoginTheme">
+        </activity>
         <activity
             android:name=".Activity.CaseDetailsActivity"
             android:theme="@style/LoginTheme" />
