--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,7 +7,7 @@ android {
     }
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.libraapplication"
+        applicationId "com.mobiledev183.lawapp"
         minSdkVersion 17
         targetSdkVersion 28
         versionCode 1
